# thockage

./: README.md  README.rst  config.toml  make.sh  pyproject.toml  requirements.txt
tests/: test_thockage.py
thockage/: audio.pyx  cli.py  config.pyx  definitions.pyx  keyboard_control.pyx  main.py
