[tool.poetry]
name = "thockage"
version = "0.1.0"
description = ""
authors = ["Mutestock <doublenegative@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pynput = "^1.7.3"
toml = "^0.10.2"
sounddevice = "^0.4.2"
SoundFile = "^0.10.3"
numpy = "^1.21.2"
Cython = "^0.29.24"
xlib = "^0.21"
click = "^8.0.1"
nose2 = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
